syntax= "proto3";

package bus_v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/KaffeeMaschina/subpub/pkg/bus_v1;bus_v1";

service PubSub {
    // Подписка (сервис отправляет поток сообщений)
    rpc Subscribe(SubscribeRequest) returns (stream Event);
    // Публикация (классический запрос-ответ)
    rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}
message SubscribeRequest {
  string key = 1;
}

message PublishRequest {
  string key = 1;
  string data = 2;
}
message Event {
  string data = 1;
}